<resources>
    <string name="app_name">Yates</string>
    <string name="login">Login</string>

    <string name="edit_profile">Edit Profile</string>
    <string name="fullname">Fullname</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="describe_yourself">Describe Yourself</string>

    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="description">Description</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="welcome">Welcome</string>
    <string name="auth_error">Invalid Username or Password!</string>
    <string name="empty_error">Cannot be Empty!</string>
    <string name="loading">Loading...</string>
    <string name="fullname_short">Name is too short (min. 3 characters)</string>
    <string name="email_invalid">Email is invalid</string>
    <string name="password_invalid">Password must be alphanumeric</string>
    <string name="username_exist">Username already exist</string>
    <string name="register_succes">Register Success!</string>
    <string name="post">Post</string>
    <string name="review">Review</string>
    <string name="location">Location</string>


    <string name="dont_see_restaurant">Don\'t see your restaurant?</string>
    <string name="add_restaurant">Add Restaurant</string>

    <string name="by_type">Browse by Type</string>
    <string name="by_meal">Browse by Meal</string>

    <string name="view_map">View on Map</string>
    <string name="reviews">Review(s)</string>

    <string name="no_review_yet">No Reviews Yet</string>
    <string name="want_to_eat">Want to Eat Here?</string>
    <string name="write_review">+Write Review</string>
    <string name="book_a_table">Book a Table</string>
    <string name="address">Address</string>
    <string name="out_of">Out of</string>
    <string name="title_activity_restaurant_location">Map</string>

    <string name="fill_with_data">Fill with My Data</string>
    <string name="book_now">Book Now</string>
    <string name="group_size">Group Size</string>
    <string name="date_time">Date and Time</string>
    <string name="cancel">Cancel</string>

    <string name="restaurant_bookings">Restaurant Bookings</string>
    <string name="hotel_bookings">Hotel Bookings</string>

    <string name="title">Title</string>
    <string name="add_image">Add Image</string>
    <string name="add_review">Add Review</string>

    <string name="restaurant_name">Restaurant Name</string>
    <string name="restaurant_address">Restaurant Address</string>
    <string name="restraurant_hours">Open Hours (ex. 09.00 AM - 10.00PM)</string>
    <string name="restaurant_location">Restaurant Location</string>
    <string name="restaurant_meal">Restaurant Meal</string>
    <string name="restaurant_type">Restaurant Type</string>

    <string name="persons">Person(s)</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nights">Night(s)</string>
    <string name="new_post">New Post</string>
    <string name="share">SHARE</string>
    <string name="popular_restaurant">Popular Restaurant</string>
    <string name="popular_hotel">Popular Hotel</string>
    <string name="no_post">NO POST</string>
    <string name="no_review">NO REVIEW</string>
    <string name="view_deal">View Deal</string>
    <string name="write_a_review">Write a review</string>
    <string name="view_hotel_in_map">View Hotel In Map</string>
    <string name="total_price">Total Price :</string>
    <string name="hotel">Hotel</string>
    <string name="not_found">Not Found</string>
    <string name="add_hotel">Add Hotel</string>
    <string name="open_time">Open Time</string>
    <string name="close_time">Close Time</string>

    <string name="changes_saved">Changes Saved</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="type">Type</string>
    <string name="meal">Meal</string>


    <string name="theme">Theme</string>
    <string name="currency">Currency</string>
    <string name="save_changes">Save Changes</string>
    <string name="cancel_booking">Cancel Booking?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel_confirmation">Cancel Confirmation</string>
    <string name="no_bookings">No Bookings</string>


</resources>

