<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="10dp"
        android:gravity="center"
        tools:context=".RestaurantBookingActivity">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:fontFamily="@font/raissone_regular"
            android:textColor="@color/fontBlack"
            android:text="@string/book_a_table"/>
        <TextView
            android:id="@+id/tv_restaurant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Restaurant Name"
            android:layout_marginVertical="5dp"/>


        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/sm_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/fill_with_data"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            app:startIconDrawable="@drawable/ic_person"
            android:hint="@string/full_name">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            app:startIconDrawable="@drawable/ic_email"
            android:hint="@string/email">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            app:startIconDrawable="@drawable/ic_group"
            app:boxStrokeColor="@color/primaryBlue"
            android:hint="@string/group_size">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_seats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textSize="20sp"/>
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/fontBlack"
                android:textSize="20sp"
                android:text="@string/date_time"/>
            <DatePicker
                android:id="@+id/dp_date"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginVertical="5sp"
                android:layout_gravity="center"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"/>
            <TimePicker
                android:id="@+id/tp_time"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_gravity="center"
                android:timePickerMode="spinner"/>
        </LinearLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_book"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:text="@string/book_now"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?attr/materialButtonOutlinedStyle"
            android:padding="10dp"
            android:text="@string/cancel"/>


    </LinearLayout>
</ScrollView>