<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        tools:context=".RestaurantActivity">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/dont_see_restaurant"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_restaurant"/>
        <TextView
            android:layout_marginTop="5dp"
            android:paddingHorizontal="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/by_meal"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_meal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:layout_marginTop="5dp"
            android:paddingHorizontal="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/by_type"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        </androidx.recyclerview.widget.RecyclerView>
        <ProgressBar
            android:id="@+id/pb"
            android:indeterminateTintMode="src_atop"
            android:indeterminateTint="@color/primaryBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_restaurant"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>