<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:isScrollContainer="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        tools:context=".RestaurantDetailActivity">
        <ProgressBar
            android:id="@+id/pb"
            android:indeterminateTintMode="src_atop"
            android:indeterminateTint="@color/primaryBlue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:id="@+id/cont_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/iv_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/illustration_restaurant"
                android:adjustViewBounds="true"
                android:maxWidth="300dp"
                android:maxHeight="200dp"
                android:scaleType="centerCrop" />
            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:textSize="20sp"
                android:paddingHorizontal="5dp"
                android:textColor="@color/fontBlack"
                android:text="Restaurant Name"
                />
            <LinearLayout
                android:layout_marginTop="5dp"
                android:paddingHorizontal="2.5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/r_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_checked"/>
                <ImageView
                    android:id="@+id/r_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_checked"/>
                <ImageView
                    android:id="@+id/r_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_checked"/>
                <ImageView
                    android:id="@+id/r_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_checked"/>
                <ImageView
                    android:id="@+id/r_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_checked"/>
                <TextView
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/out_of"/>
                <TextView
                    android:id="@+id/tv_review"
                    android:layout_marginLeft="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="0"/>
                <TextView
                    android:layout_marginLeft="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/review"/>
            </LinearLayout>
            <TextView
                android:id="@+id/tv_meal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="15sp"
                android:paddingHorizontal="5dp"
                android:text="Restaurant Meal"
                />
            <TextView
                android:id="@+id/tv_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:paddingHorizontal="5dp"
                android:text="Restaurant Type"
                />
            <TextView
                android:id="@+id/tv_hours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:textSize="15sp"
                android:paddingHorizontal="5dp"
                android:text="Restaurant OpenHours"
                />

            <View
                style="@style/Divider.Horizontal"></View>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:textSize="20sp"
                android:textColor="@color/fontBlack"

                android:paddingHorizontal="5dp"
                android:text="@string/address" />
            <TextView
                android:id="@+id/tv_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="16sp"
                android:paddingHorizontal="5dp"
                android:text="Restaurant Address"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_map"

                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:text="@string/view_map"/>

            <View
                style="@style/Divider.Horizontal"></View>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="14sp"
                android:gravity="center"
                android:paddingHorizontal="5dp"
                android:text="@string/want_to_eat"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_book"
                android:layout_width="wrap_content"
                android:layout_gravity="center"

                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:text="@string/book_a_table"/>

            <View
                style="@style/Divider.Horizontal"></View>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:textSize="20sp"
                    android:textColor="@color/fontBlack"
                    android:paddingHorizontal="5dp"
                    android:text="@string/review" />

                <TextView
                    android:id="@+id/tv_addrev"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:textSize="20sp"
                    android:drawableStart="@drawable/ic_add"
                    android:textColor="@color/primaryBlue"
                    android:paddingHorizontal="5dp"
                    android:text="@string/write_review"  />
            </LinearLayout>
            <View
                style="@style/Divider.Horizontal"></View>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_reviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="180dp">

            </androidx.recyclerview.widget.RecyclerView>



        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>